Fix scrollbar issue (#153)
* add responsiveness to contact section

* add right marquee data for design hero section

* fix top position for mobile on home page

* fix mobile view for home page

* fix marquee gap on home page

* fix home page from being off centered on mobile view

* fix scroll bar issue (fr this time!)

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -31,6 +31,10 @@
   font-family: var(--font-poppins);
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   max-width: 100vw;
   overflow-x: hidden;
